--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -50,7 +50,7 @@ Example context (json):
                         <i class="fa fa-unlock text-white m-0 fa-xl" aria-hidden="true"></i></span>
                     <span class="btn border-0 h5 mb-0 resize"
                           title="{{#str}}toggleview,mod_interactivevideo{{/str}}">
-                        <i class="fa fa-{{^fullscreen}}expand{{/fullscreen}}-alt fa-{{#fullscreen}}compress{{/fullscreen}}-alt text-white m-0 fa-xl" aria-hidden="true"></i></span>
+                        <i class="fa fa-{{^fullscreen}}expand{{/fullscreen}}{{#fullscreen}}compress{{/fullscreen}} text-white m-0 fa-xl" aria-hidden="true"></i></span>
                     <span class="btn border-0 h5 mb-0 open-external-link"
                           title="{{#str}}openinnewtab,mod_interactivevideo{{/str}}"
                           data-href="{{root}}/mod/interactivevideo/view.php?id={{id}}">
