--- a/styles.css
+++ b/styles.css
@@ -1347,7 +1347,7 @@ html:has(.path-mod-interactivevideo) {
 }
 
 .path-mod-interactivevideo #annotation-sidebar .sidebar-nav-item.no-completion.active {
-    background-color: var(--ivsecondary);
+    background-color: var(--ivgray);
     border-right: 1px solid var(--ivsecondary);
 }
 
