--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,10 @@
     font-weight: normal !important;
 }
 
+.iv-font-weight-light {
+    font-weight: 300 !important;
+}
+
 .iv-rounded-0 {
     border-radius: 0 !important;
 }
@@ -237,6 +241,11 @@
 .iv-badge-warning {
     color: #fff !important;
     background-color: var(--ivwarning) !important;
+}
+
+.iv-badge-danger {
+    color: #fff !important;
+    background-color: var(--ivdanger) !important;
 }
 
 .iv-badge-pill {
@@ -1236,11 +1245,11 @@ html:has(.path-mod-interactivevideo) {
 }
 
 .path-mod-interactivevideo #wrapper.fullscreen #content .no-overflow,
-.path-mod-interactivevideo #wrapper.fullscreen #content > .h5p,
+.path-mod-interactivevideo #wrapper.fullscreen #content>.h5p,
 .path-mod-interactivevideo #wrapper.fullscreen #start-screen .no-overflow,
 .path-mod-interactivevideo #wrapper.fullscreen #end-screen .no-overflow,
 .path-mod-interactivevideo.embed-mode #message[data-placement="inline"] .no-overflow,
-.path-mod-interactivevideo.embed-mode #message[data-placement="inline"] #content > .h5p {
+.path-mod-interactivevideo.embed-mode #message[data-placement="inline"] #content>.h5p {
     max-width: 1000px;
     margin: 0 auto;
 }
@@ -1372,7 +1381,7 @@ html:has(.path-mod-interactivevideo) {
     position: relative;
 }
 
-#page-mod-interactivevideo-report th.rotate > div {
+#page-mod-interactivevideo-report th.rotate>div {
     transform: rotate3d(0, 0, 1, -90deg);
     width: 30px;
     display: flex;
@@ -1382,19 +1391,19 @@ html:has(.path-mod-interactivevideo) {
     bottom: 1.75rem;
 }
 
-#page-mod-interactivevideo-report.bs-5 th.rotate > div {
+#page-mod-interactivevideo-report.bs-5 th.rotate>div {
     bottom: 1rem;
 }
 
-[dir="rtl"] #page-mod-interactivevideo-report th.rotate > div {
+[dir="rtl"] #page-mod-interactivevideo-report th.rotate>div {
     transform: rotate3d(0, 0, 1, 90deg);
 }
 
-#page-mod-interactivevideo-report th.rotate > div .rotate-0 {
+#page-mod-interactivevideo-report th.rotate>div .rotate-0 {
     transform: rotate(90deg);
 }
 
-#page-mod-interactivevideo-report th.rotate > div > a {
+#page-mod-interactivevideo-report th.rotate>div>a {
     margin-inline-start: 0.25rem;
 }
 
@@ -1630,7 +1639,7 @@ html:has(.path-mod-interactivevideo) {
     display: none !important;
 }
 
-.path-mod-interactivevideo [data-region="chapterlists"] .chapter.active-chapter > div {
+.path-mod-interactivevideo [data-region="chapterlists"] .chapter.active-chapter>div {
     color: #fff;
     background: var(--ivprimary);
 }
@@ -1713,8 +1722,8 @@ html:has(.path-mod-interactivevideo) {
 
 .path-mod-interactivevideo.no-original-controls video::-webkit-media-controls-panel,
 .path-mod-interactivevideo.no-original-controls .w-bottom-bar,
-.path-mod-interactivevideo.no-original-controls .player-Rumble-cls > div > div:not(#pac),
-.path-mod-interactivevideo.no-original-controls .rumblePlayer-Rumble-cls > div > div:not(#pac) {
+.path-mod-interactivevideo.no-original-controls .player-Rumble-cls>div>div:not(#pac),
+.path-mod-interactivevideo.no-original-controls .rumblePlayer-Rumble-cls>div>div:not(#pac) {
     display: none !important;
 }
 
@@ -1876,9 +1885,9 @@ html:has(.path-mod-interactivevideo) {
     height: var(--ivdvh);
 }
 
-.path-mod-interactivevideo .modal-fullscreen > .modal-dialog,
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog,
-.iv-modal.modal-fullscreen > .modal-dialog {
+.path-mod-interactivevideo .modal-fullscreen>.modal-dialog,
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog,
+.iv-modal.modal-fullscreen>.modal-dialog {
     max-width: 100% !important;
     width: 100% !important;
     justify-content: start;
@@ -1887,27 +1896,27 @@ html:has(.path-mod-interactivevideo) {
     margin: 0;
 }
 
-.path-mod-interactivevideo .modal-fullscreen > .modal-dialog .modal-content,
-.iv-modal.modal-fullscreen > .modal-dialog .modal-content {
+.path-mod-interactivevideo .modal-fullscreen>.modal-dialog .modal-content,
+.iv-modal.modal-fullscreen>.modal-dialog .modal-content {
     border-radius: 0 !important;
     height: var(--ivdvh);
     border: 0;
     max-height: var(--ivdvh);
 }
 
-.path-mod-interactivevideo .modal-fullscreen > .modal-dialog .modal-body,
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-body,
-.iv-modal.modal-fullscreen > .modal-dialog .modal-body {
+.path-mod-interactivevideo .modal-fullscreen>.modal-dialog .modal-body,
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-body,
+.iv-modal.modal-fullscreen>.modal-dialog .modal-body {
     height: var(--ivdvh);
     padding: 1rem;
     scrollbar-width: thin;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog {
     transition: all ease-in-out 300ms;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog:not(:has(.show-control)) {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog:not(:has(.show-control)) {
     max-width: 100% !important;
     width: 100% !important;
     justify-content: start;
@@ -2510,7 +2519,7 @@ html:has(.path-mod-interactivevideo) {
     padding-bottom: 1rem;
 }
 
-#page-mod-interactivevideo-interactions #timeline-wrapper > .ui-resizable-handle:hover {
+#page-mod-interactivevideo-interactions #timeline-wrapper>.ui-resizable-handle:hover {
     transition: all ease-in-out 300ms;
     background-color: #328cdb;
     z-index: 105;
@@ -2522,7 +2531,7 @@ html:has(.path-mod-interactivevideo) {
     margin-top: 70px;
 }
 
-#page-mod-interactivevideo-interactions #top-region > .iv-row {
+#page-mod-interactivevideo-interactions #top-region>.iv-row {
     min-width: 100%;
     height: 100%;
     display: flex;
@@ -2599,7 +2608,7 @@ html:has(.path-mod-interactivevideo) {
     height: calc(var(--ivdvh) - 55px);
 }
 
-#page-mod-interactivevideo-view.embed-mode #interactivevideo-container > .row {
+#page-mod-interactivevideo-view.embed-mode #interactivevideo-container>.row {
     width: 100%;
 }
 
@@ -2627,10 +2636,10 @@ html:has(.path-mod-interactivevideo) {
     pointer-events: none;
 }
 
-.path-mod-interactivevideo:not(.bs-5) .input-group > input,
-.path-mod-interactivevideo:not(.bs-5) .input-group > select,
-.path-mod-interactivevideo:not(.bs-5) .input-group > .input-group-prepend,
-.path-mod-interactivevideo:not(.bs-5) .input-group > .input-group-append,
+.path-mod-interactivevideo:not(.bs-5) .input-group>input,
+.path-mod-interactivevideo:not(.bs-5) .input-group>select,
+.path-mod-interactivevideo:not(.bs-5) .input-group>.input-group-prepend,
+.path-mod-interactivevideo:not(.bs-5) .input-group>.input-group-append,
 .path-mod-interactivevideo:not(.bs-5) .input-group .input-group-text {
     height: 40px;
     border-radius: 0;
@@ -3284,6 +3293,49 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     max-width: 100%;
 }
 
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) {
+    width: 100% !important;
+    max-width: 100% !important;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card {
+    flex-direction: column;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    align-items: center;
+    max-width: unset;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card .image-container {
+    max-width: 100%;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card.card-medium .image-container {
+    max-width: 50%;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card.card-mediumlarge .image-container {
+    max-width: 66.67%;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card.card-largemedium .image-container {
+    max-width: 75%;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card.card-small .image-container {
+    max-width: 33.33%;
+}
+
+.path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card.card-tiny .image-container {
+    max-width: 25%;
+}
+
+@media (max-width: 575.98px) {
+    .path-course-view .modtype_interactivevideo:has(.interactivevideo-card.iv-aligncenter) .interactivevideo-card .image-container {
+        max-width: 100%!important;
+    }
+}
+
 .path-course-view #playermodal .modal-header {
     display: flex;
     left: 0;
@@ -3313,12 +3365,12 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     left: 0;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-content {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-content {
     height: calc(var(--ivdvh) + 55px);
     transition: height ease-in-out 300ms;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-content .toggle-controls {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-content .toggle-controls {
     position: absolute;
     bottom: calc(55px + 0.25rem);
     left: 0.25rem;
@@ -3330,16 +3382,16 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     opacity: 0.4;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-content .toggle-controls:hover {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-content .toggle-controls:hover {
     background: rgba(0, 0, 0, 0.5);
     opacity: 1;
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-content.show-control {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-content.show-control {
     height: var(--ivdvh);
 }
 
-.path-course-view #playermodal.modal-fullscreen > .modal-dialog .modal-content.show-control .toggle-controls {
+.path-course-view #playermodal.modal-fullscreen>.modal-dialog .modal-content.show-control .toggle-controls {
     transform: rotate(180deg);
     transition: transform ease-in-out 300ms;
 }
@@ -3348,7 +3400,7 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     display: none !important;
 }
 
-.path-course-view #playermodal > .modal-dialog .automatic-completion-conditions .badge {
+.path-course-view #playermodal>.modal-dialog .automatic-completion-conditions .badge {
     font-size: 100%;
 }
 
@@ -3360,7 +3412,7 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     bottom: 0;
 }
 
-.path-course-view #playermodal > .modal-dialog .modal-body {
+.path-course-view #playermodal>.modal-dialog .modal-body {
     transition: all ease-in-out 300ms;
 }
 
@@ -3369,7 +3421,7 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     display: flex !important;
 }
 
-.path-course-view #playermodal.locked > .modal-dialog .modal-body {
+.path-course-view #playermodal.locked>.modal-dialog .modal-body {
     margin-top: 50px;
     height: calc(var(--ivdvh) - 50px);
     transition: all ease-in-out 300ms;
@@ -3381,12 +3433,12 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     transition: all ease-in-out 300ms;
 }
 
-.path-course-view #playermodal.modal-resized > .modal-dialog .modal-body {
+.path-course-view #playermodal.modal-resized>.modal-dialog .modal-body {
     height: calc(var(--ivdvh) - 50px);
     transition: all ease-in-out 300ms;
 }
 
-.path-course-view #playermodal.modal-resized > .modal-dialog .modal-body iframe {
+.path-course-view #playermodal.modal-resized>.modal-dialog .modal-body iframe {
     position: relative !important;
 }
 
@@ -3715,7 +3767,7 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     width: 0;
 }
 
-.path-mod-interactivevideo .table > :not(caption) > * > * {
+.path-mod-interactivevideo .table> :not(caption)>*>* {
     background-color: transparent;
 }
 
@@ -3723,9 +3775,25 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.05);
     }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes jellyInLg {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
     100% {
         transform: scale(1);
     }
@@ -3734,4 +3802,15 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
 .modal.jelly-anim .modal-dialog {
     animation: jellyIn 0.5s ease-in-out;
     transform-origin: center;
+}
+
+#playermodal .modal-action .fa-xl {
+    font-size: 1.5em;
+    line-height: 0.0416666682em;
+    vertical-align: -0.125em;
+}
+
+#playermodal .modal-header .btn,
+.path-mod-interactivevideo.darkmode [data-action="toggle-manual-completion"]:not([data-toggletype="manual:undo"]) {
+    color: #fff;
 }
