--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -119,7 +119,10 @@ Example context (json):
                             title="{{#str}}delete, mod_interactivevideo{{/str}}">
                             <i class="bi bi-trash3-fill text-danger"></i>
                         </button>
-
+                        <button class="btn btn-sm" id="annotation-list-bulk-setdefault"
+                            title="{{#str}}setasdefault, mod_interactivevideo{{/str}}">
+                            <i class="bi bi-ui-checks text-primary"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -134,7 +137,7 @@ Example context (json):
                         <div class="d-flex align-items-center">
                             <span data-editable="timestamp"
                                   title="{{#str}}goto, mod_interactivevideo{{/str}}"
-                                  class="timestamp bg-light px-2 py-1 iv-rounded-sm text-truncate">0</span>
+                                  class="timestamp bg-light px-2 py-1 iv-rounded text-truncate">0</span>
                             <input type="text"
                                    name="timestampassist"
                                    data-field="timestamp"
