--- a/templates/addcontenttype.mustache
+++ b/templates/addcontenttype.mustache
@@ -34,7 +34,7 @@
                 </button>
                 </div>
             <div class="w-100 d-flex align-items-center">
-                <input type="text" class="form-control form-control-sm w-100 mt-3" id="contentsearch" placeholder="{{#str}}search, mod_interactivevideo{{/str}}">
+                <input type="text" class="form-control form-control-sm w-100 mt-3" id="contentsearch" placeholder="{{#str}}search, mod_interactivevideo{{/str}}" tabindex="0">
                 </div>
             </div>
             <div class="p-0 modal-body" id="addcontentdropdown">
