--- a/templates/editortimeline.mustache
+++ b/templates/editortimeline.mustache
@@ -119,11 +119,11 @@ Example context (json):
     <div id="minute-markers-wrapper" class="position-relative" dir="ltr">
         <div id="minute-markers" class="pt-1 d-flex position-relative"></div>
     </div>
-    <div id="vseek" class="mx-5 position-relative" dir="ltr">
+    <div id="vseek" class="iv-mx-5 position-relative" dir="ltr">
         <div id="scrollhead-top"></div>
         <div class="w-100" id="bar"></div>
     </div>
-    <div id="timeline" class="px-5">
+    <div id="timeline" class="iv-px-5">
         <div id="timeline-items-wrapper" class="iv-pl-0" dir="ltr">
             <div id="timeline-items" dir="ltr">
                 <div id="scrollbar" class="snap">
