--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -27,7 +27,7 @@ Example context (json):
      aria-labelledby="playermodalLabel"
      aria-hidden="true">
     <div class="{{#fullscreen}}iv-rounded-0{{/fullscreen}} modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl position-relative">
-        <div class="modal-content {{#showcontrols}}show-control{{/showcontrols}} {{#fullscreen}}iv-rounded-0{{/fullscreen}} border-0">
+        <div class="modal-content show-control {{#fullscreen}}iv-rounded-0{{/fullscreen}} border-0">
             <div class="modal-header border-0 text-white align-items-center py-0 h-0 position-absolute w-100 z-index-1 iv-rounded-0">
                 <div class="modal-background w-100 position-absolute"></div>
                 <span class="modal-title flex-grow-0 position-relative z-index-1 d-flex align-items-center overflow-hidden"
