--- a/templates/activitycard.mustache
+++ b/templates/activitycard.mustache
@@ -18,6 +18,7 @@ Example context (json):
 {
 }
 }}
+
 <div class="{{#formativ}}formativ{{/formativ}}">
     <div id="interactivevideo-{{cm.instance}}"
          class="interactivevideo-card{{^columnlayout}} columnlayout{{/columnlayout}}{{#showposterimageright}} poster-right{{/showposterimageright}}{{#showdescription}}{{#formattedintro}} hasdescription{{/formattedintro}}{{/showdescription}} card-{{size}}{{^cm.uservisible}} iv-invisible no-pointer{{/cm.uservisible}} {{#posterimagesize}}full-width-poster{{/posterimagesize}} {{#aligncenter}}iv-aligncenter{{/aligncenter}} {{#hastracks}}hastracks{{/hastracks}}{{#hasalternative}}hasalternative{{/hasalternative}}"
@@ -27,182 +28,15 @@ Example context (json):
          data-instance="{{cm.instance}}"
          data-courseid="{{cm.course}}">
         {{^cardonly}}
-        {{#showposterimage}}
-        <div class="image-container position-relative {{#hasanalytics}}hasanalytics{{/hasanalytics}}">
-            <div class="poster position-relative {{#posterimagesquare}}square{{/posterimagesquare}}">
-                <img src="{{interactivevideo.posterimage}}" loading="lazy">
-                {{#cm.uservisible}}
-                <a href="{{#launchinpopup}}javascript:void(){{/launchinpopup}}{{^launchinpopup}}{{baseurl}}/mod/interactivevideo/view.php?id={{cm.id}}{{/launchinpopup}}" class="{{#launchinpopup}}launch-interactivevideo{{/launchinpopup}} overlay" {{#launchinpopup}} data-id="{{cm.id}}" data-contextid="{{cm.context.id}}" data-instance="{{cm.instance}}" data-course="{{cm.course}}" data-title="{{formattedname}}"{{/launchinpopup}}>
-                    <i class="fa fa-play"></i>
-                </a>
-            {{/cm.uservisible}}
-            <span class="badge duration">{{duration}}</span>
-            {{#passwordprotected}}<span class="badge password" title="{{#str}}passwordrequired,interactivevideo{{/str}}"><i class="fa fa-key"></i></span>{{/passwordprotected}}
-            {{#cm.uservisible}}
-            {{#new}}
-            <span class="badge iv-badge-primary new-badge">{{#str}}new,interactivevideo{{/str}}</span>
-        {{/new}}
-        {{#hasanalytics}}
-        <div class="analytics iv-rounded-0 progress">
-            <div class="progress-bar"
-                 role="progressbar"
-                 style="width: {{analytics}}%"
-                 aria-valuenow="{{analytics}}"
-                 aria-valuemin="0"
-                 aria-valuemax="100"
-                 data-current="{{analytics}}"
-                 data-expected="{{analyticsexpected}}"></div>
-        </div>
-    {{/hasanalytics}}
-{{/cm.uservisible}}
+            {{> mod_interactivevideo/card}}
+        {{/cardonly}}
+        {{#cardonly}}
+            {{> mod_interactivevideo/cardonly}}
+        {{/cardonly}}
 </div>
-</div>
-{{/showposterimage}}
-<div class="description-container d-flex justify-content-between flex-column{{^showname}} mt-0{{/showname}}">
-    <div class="top-section small">
-        <div class="w-100 d-flex align-items-start">
-            {{#showname}}
-            {{#cm.uservisible}}
-            <a href="{{baseurl}}/mod/interactivevideo/view.php?id={{cm.id}}"
-               class="clamp-2 text-dark h5 text-decoration-none mb-1">{{{formattedname}}}</a>
-            {{#hascompletion}}
-            {{#overallcomplete}}<i class="bi bi-check-circle-fill text-success iv-ml-2 fs-n"></i>{{/overallcomplete}}
-            {{^overallcomplete}}<i class="bi bi-circle iv-ml-2"></i>{{/overallcomplete}}
-        {{/hascompletion}}
-    {{/cm.uservisible}}
-    {{^cm.uservisible}}
-    <a href="javascript:void()"
-       class="text-dark h5 text-decoration-none mb-0">{{{formattedname}}}</a>
-{{/cm.uservisible}}
-{{/showname}}
-{{#showdescription}}
-{{#formattedintro}}
-{{^usecustomdesc}}<i class="fa fa-chevron-right description-show iv-ml-auto iv-mr-1 mb-0 cursor-pointer"></i>{{/usecustomdesc}}{{/formattedintro}}
-{{/showdescription}}
-</div>
-{{#showdescription}}
-{{#formattedintro}}
-<div class="description {{^showname}}mt-0{{/showname}} {{#showname}}mt-2{{/showname}}" {{^usecustomdesc}}style="display:none"{{/usecustomdesc}}>
-    {{{formattedintro}}}
-</div>
-{{/formattedintro}}
-{{/showdescription}}
-</div>
-{{#cm.uservisible}}
-<div class="bottom-section">
-    {{#showprogressbar}}
-    {{^noitems}}
-    <div class="tasks progress mt-3 bg-primary-alt">
-        <div class="progress-bar {{#completed}}bg-success{{/completed}}{{^completed}}bg-primary{{/completed}}"
-             role="progressbar"
-             style="width: {{usercompletion.completionpercentage}}%"
-             aria-valuenow="{{usercompletion.completionpercentage}}"
-             aria-valuemin="0"
-             aria-valuemax="100"></div>
-    </div>
-    <div class="d-flex justify-content-between">
-        <small title="{{#str}}taskscompleted,interactivevideo{{/str}}"><i class="fa fa-bullseye iv-mr-1"></i><span class="percentage">{{usercompletion.completionpercentage}}</span>% <span class="items">({{completeditems}}/{{totalitems}})</span></small>
-        {{^noxp}}
-        <small title="{{#str}}xpcompleted,interactivevideo{{/str}}"><i class="fa fa-star iv-mr-1"></i><span class="xp">{{usercompletion.xp}}</span>/{{totalxp}}</small>
-    {{/noxp}}
-</div>
-{{/noitems}}
-{{/showprogressbar}}
-{{#completion}}
-<div class="small mt-2 {{^showcompletion}}d-none{{/showcompletion}}">{{{completion}}}</div>
-{{/completion}}
-</div>
-{{/cm.uservisible}}
-</div>
-{{/cardonly}}
-{{#cardonly}}
-<div class="image-container card-only {{#hasanalytics}}hasanalytics{{/hasanalytics}}">
-    <div class="poster position-relative {{#posterimagesquare}}square{{/posterimagesquare}}">
-        <img src="{{interactivevideo.posterimage}}" loading="lazy">
-        {{#new}}
-        <span class="badge iv-badge-primary new-badge">{{#str}}new,interactivevideo{{/str}}</span>
-    {{/new}}
-    {{#cm.uservisible}}
-    <a href="{{#launchinpopup}}javascript:void(){{/launchinpopup}}{{^launchinpopup}}{{baseurl}}/mod/interactivevideo/view.php?id={{cm.id}}{{/launchinpopup}}" class="{{#launchinpopup}}launch-interactivevideo{{/launchinpopup}} overlay" {{#launchinpopup}} data-id="{{cm.id}}" data-contextid="{{cm.context.id}}" data-instance="{{cm.instance}}" data-course="{{cm.course}}" data-title="{{formattedname}}"{{/launchinpopup}}><i class="fa fa-play"></i></a>
-{{/cm.uservisible}}
-<span class="position-absolute badge duration">{{duration}}</span>
-{{#passwordprotected}}<span class="badge password" title="{{#str}}passwordrequired,interactivevideo{{/str}}"><i class="fa fa-key"></i></span>{{/passwordprotected}}
-{{#cm.uservisible}}
-{{^noitems}}
-<span class="position-absolute badge percentage-badge d-flex">
-    <i class="fa fa-bullseye iv-mr-1"></i>
-    <span class="percentage">{{usercompletion.completionpercentage}}</span>%
-</span>
-{{/noitems}}
-{{#hasanalytics}}
-<div class="analytics iv-rounded-0 progress">
-    <div class="progress-bar bg-danger"
-         role="progressbar"
-         style="width: {{analytics}}%"
-         aria-valuenow="{{analytics}}"
-         aria-valuemin="0"
-         aria-valuemax="100"
-         data-current="{{analytics}}"
-         data-expected="{{analyticsexpected}}"></div>
-</div>
-{{/hasanalytics}}
-{{/cm.uservisible}}
-</div>
-<div class="info p-2 w-100 position-absolute small">
-    <a href="{{baseurl}}/mod/interactivevideo/view.php?id={{cm.id}}"
-       class="title iv-font-weight-bold nolink no-pointer text-decoration-none text-white">{{{formattedname}}}</a>
-    {{#hasanalytics}}
-    <div class="analytics progress position-relative mt-2">
-        <div class="progress-bar bg-danger"
-             role="progressbar"
-             style="width: {{analytics}}%"
-             aria-valuenow="{{analytics}}"
-             aria-valuemin="0"
-             aria-valuemax="100"
-             data-current="{{analytics}}"
-             data-expected="{{analyticsexpected}}"></div>
-    </div>
-    <small class="d-flex align-items-center"
-           title="{{#str}}watched,interactivevideo{{/str}}"><i class="fa fa-stopwatch iv-mr-auto"></i><span class="analytics-percentage">{{analytics}}</span>%</small>
-{{/hasanalytics}}
-{{^noitems}}
-<div class="tasks progress mt-2 bg-primary-alt">
-    <div class="progress-bar {{#completed}}bg-success{{/completed}}{{^completed}}bg-primary{{/completed}}"
-         role="progressbar"
-         style="width: {{usercompletion.completionpercentage}}%"
-         aria-valuenow="{{usercompletion.completionpercentage}}"
-         aria-valuemin="0"
-         aria-valuemax="100"></div>
-</div>
-<div class="task-percentage d-flex justify-content-between mt-1">
-    <small class="d-flex align-items-center"
-           title="{{#str}}taskscompleted,interactivevideo{{/str}}"><i class="fa fa-bullseye iv-mr-1"></i><span class="percentage">{{usercompletion.completionpercentage}}</span>%<span class="items iv-ml-1">({{completeditems}}/{{totalitems}})</span></small>
-    {{^noxp}}
-    <small class="d-flex align-items-center"
-           title="{{#str}}xpcompleted,interactivevideo{{/str}}"><i class="fa fa-star iv-mr-1"></i><span class="xp">{{usercompletion.xp}}</span>/{{totalxp}}</small>
-{{/noxp}}
-</div>
-{{/noitems}}
-{{#completion}}
-<div class="small mt-3 {{^showcompletion}}d-none{{/showcompletion}}">{{{completion}}}</div>
-{{/completion}}
-</div>
-</div>
-{{#showname}}
-<div class="description-container w-auto mt-0">
-    {{#cm.uservisible}}
-    <a href="{{baseurl}}/mod/interactivevideo/view.php?id={{cm.id}}"
-       class="clamp-2 text-dark h5 text-decoration-none mb-1">{{{formattedname}}}</a>
-{{/cm.uservisible}}
-{{^cm.uservisible}}
-<a href="javascript:void()"
-   class="clamp-2 text-dark h5 text-decoration-none mb-1">{{{formattedname}}}</a>
-{{/cm.uservisible}}
-</div>
-{{/showname}}
-{{/cardonly}}
-</div>
-{{#afterlink}}
-{{{afterlink}}}
-{{/afterlink}}
+{{^displayoptions.sectionname}}
+    {{#afterlink}}
+    {{{afterlink}}}
+    {{/afterlink}}
+{{/displayoptions.sectionname}}
 </div>
