--- a/templates/captionmenu.mustache
+++ b/templates/captionmenu.mustache
@@ -29,7 +29,7 @@
                   data{{bs}}-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
-                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1">
+                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1 {{^displayoptions.captions}}d-none{{/displayoptions.captions}}">
                 <i class="bi bi-badge-cc"
                    data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
                    data{{bs}}-trigger="hover"
