--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -19,6 +19,10 @@ Example context (json):
 {
 }
 }}
+{{! Required for viostream, bunnystream.}}
+{{#useembedly}}
+<script src="https://cdn.embed.ly/player-0.1.0.min.js"></script>
+{{/useembedly}}
 <div id="wrapper">
     <div id="top-region">
         <div class="iv-row m-0 position-relative">
