--- a/templates/speedmenu.mustache
+++ b/templates/speedmenu.mustache
@@ -28,7 +28,7 @@
                   data{{bs}}-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
-                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1">
+                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1 {{^displayoptions.playbackrate}}d-none{{/displayoptions.playbackrate}}">
                 <i class="bi bi-speedometer2"
                    data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
                    data{{bs}}-trigger="hover"
